# adcirc-dgswem-coupling

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup.py
cmake/: BuildType.cmake  CodeCoverage.cmake  FindF2PY.cmake
pyADCIRCDGSWEM/: __init__.py  __main__.py  main.py
pyADCIRCDGSWEM/tests/unit/: __init__.py  test_template.py  unitcontext.py
src/: adcircdgswem_main.F90  adcircdgswem_main.F95  adcircdgswem_program.F90
srcpy/: README.md  adcircdgswem_python.F95  pyadcircdgswem_main.F95
tests/: CMakeLists.txt  test_adcoupler_main.F95  test_main.F95
